--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -3,3 +3,7 @@ booking.property=Booking Profile Dev
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
+spring.datasource.username=root
+spring.datasource.password=cami160819
